@@ -14,6 +14,8 @@ maintainer.</para>
 &i18n-pac; package, which is &re-export;ed from the &ext-pac;
 package.</para>
 &base-module;
+<simpara>When this module is present, &features-var;
+ contains the symbol <constant>:I18N</constant>.</simpara>
 
 <variablelist>
  <varlistentry id="gettext"><term><code>(&gettext;
